--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 			<div class="box black center-content">
 				<img src="image/safehouse.jpg" class="button restrict-img-size" id="house" onclick="checkConfiguration(this)"/>
-				<a href="https://andrewmarin1.github.io/escaperoom"><img src="image/key.png" class="display restrict-img-size" id="key"/></a>
+				<a href="https://williamwebster1.github.io/EscapeRoom/"><img src="image/key.png" class="display restrict-img-size" id="key"/></a>
 			</div>
 			<div class="box green center-content el.classList.add">
 			<img src="image/click.png" class="restrict-img-size"/>
